# 2024-11-19

./: CMakeLists.txt
2024-11-19/: CMakeLists.txt  brace-init.cpp  functor.cpp  intro.cpp  push-back-move.cpp  rvo-or-not.cpp  sort-lambda.cpp  test.cpp
2024-11-20/: intro.cpp  lamba-functor.cpp  lamba-sort.cpp  map-index-operator.cpp  shared-ptr.cpp  unique-ptr.cpp
2024-11-21/: CMakeLists.txt
attic/2024-11-20/: CMakeLists.txt  enum.cpp  move-further-info.cpp  notes.rst
attic/2024-11-21/: CMakeLists.txt  functor-lambda.cpp  intro.cpp  map-index-operator.cpp  move.cpp  pythonicity.cpp  shared-ptr.cpp  unique-ptr.cpp
day-1/: CMakeLists.txt  async.cpp  brace-init.cpp  intro.cpp  map-pitfall-no1.cpp  notes.rst  shared-ptr-memory-mgmt.cpp  structured-binding.cpp  test.cpp  unique-ptr-memory-mgmt.cpp
